[build-system]
requires = ["poetry-core>=1.2.2"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
volttron-topic-watcher = "topic_watcher.agent:main"

[tool.isort]
profile = "black"

[tool.poetry]
include = ["src/topic_watcher", "config"]

name = "volttron-topic-watcher"
version = "0.1.0"
description = ""
authors = ["VOLTTRON Team <volttron@pnnl.gov>"]
license = "Apache License 2.0"
readme = "README.md"
repository = "https://github.com/eclipse-volttron/volttron-topic-watcher"
homepage = "https://github.com/eclipse-volttron/volttron-topic-watcher"
keywords = []
packages = [ { include = "topic_watcher", from = "src" } ]
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Developers",
    "Intended Audience :: Other Audience",
    "License :: OSI Approved :: Apache Software License"
]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
volttron = "^10.0.4rc1"

[tool.poetry.group.dev.dependencies]
volttron-testing = "^0.4.0rc0"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
mock = "^4.0.3"
pre-commit = "^2.17.0"
yapf = "^0.32.0"
toml = "^0.10.2"
mypy = "^0.942"
coverage = "^6.3.2"

[tool.poetry.dev-dependencies]
Sphinx = "^6.0.0"
sphinx-rtd-theme = "^1.2.0"

[tool.yapf]
based_on_style = "pep8"
spaces_before_comment = 4
column_limit = 120
split_before_logical_operator = true

[tool.yapfignore]
ignore_patterns = [
    ".venv/**",
    ".pytest_cache/**",
    "dist/**",
    "docs/**"
]

[tool.mypy]
show_error_context = true
pretty = true
show_column_numbers = true
